correcion para railway